--- a/01_main.html
+++ b/01_main.html
@@ -26,7 +26,7 @@
 		<!-- header -->
 		<header class="header">
 			<div class="cont_center">
-				<h1 class="logo"><img src="contents/images/header/logo.png" alt="THE ART"></h1>
+				<h1 class="logo"><a href="#"><img src="contents/images/header/logo.png" alt="THE ART"></a></h1>
 
 				<button type="button" class="btn_gnb"><span>메뉴 열기</span></button>
 				
