--- a/Login.html
+++ b/Login.html
@@ -81,19 +81,58 @@
 
 		<!-- container -->
 		<div class="container">
-			<div class="cont_center content_error">
-				<h2 class="title_h2">페이지를 찾을 수 없습니다.</h2>
-				
-				<div class="text_error">
-					찾으려는 페이지의 주소가 잘못 입력되었거나, <br>
-					주소의 변경 혹은 삭제로 인해 사용하실 수 없습니다. <br>
-					다시 한번 확인해 주세요.
+			<div class="cont_center contents_login">
+				<h2 class="title_main">Gallerist Login</h2>
+
+				<ul class="login_input_list">
+					<li>
+						<div class="input_form_area">
+							<input type="text" class="input_form" placeholder="가입하신 메일주소" title="가입하신 메일주소 입력">
+
+							<!-- 입력 오류시 -->
+							<span class="input_error">오류</span>
+							<!-- //입력 오류시 -->
+						</div>
+
+						<p class="validate_text">메일주소 형식이 올바르지 않습니다.</p>
+					</li>
+					<li>
+						<div class="input_form_area">
+							<input type="password" class="input_form" placeholder="비밀번호" title="비밀번호 입력">
+
+							<!-- 입력 오류시 -->
+							<span class="input_error">오류</span>
+							<!-- //입력 오류시 -->
+						</div>
+
+						<p class="validate_text">영문, 숫자, 특수문자 포함 8자 이상</p>
+					</li>
+				</ul>
+
+				<div class="auto_search_area">
+					<span class="d_check">
+						<input type="checkbox" id="auto_login">
+						<label for="auto_login">자동 로그인</label>
+					</span>
+
+					<a href="#" class="link_pw">비밀번호 찾기</a>
 				</div>
 
-				<div class="btn_home">
-					<a href="#">디아트 홈</a>
+				<div class="btn_login_area2">
+					<!-- 활성화 될 경우 active 클래스 추가 -->
+					<a href="#" class="btn_login">로그인</a>
+					<!-- //활성화 될 경우 active 클래스 추가 -->
 				</div>
-			</div>			
+
+				<div class="join_link">
+					처음이신가요?
+					<a href="#">디아트 가입하기</a>
+				</div>
+
+				<div class="btn_back_area">
+					<a href="#" class="btn_back">이전 화면</a>
+				</div>
+			</div>
 		</div>
 		<!-- //container -->
 
