--- a/Sign-up_complete.html
+++ b/Sign-up_complete.html
@@ -81,19 +81,24 @@
 
 		<!-- container -->
 		<div class="container">
-			<div class="cont_center content_error">
-				<h2 class="title_h2">페이지를 찾을 수 없습니다.</h2>
-				
-				<div class="text_error">
-					찾으려는 페이지의 주소가 잘못 입력되었거나, <br>
-					주소의 변경 혹은 삭제로 인해 사용하실 수 없습니다. <br>
-					다시 한번 확인해 주세요.
-				</div>
+			<div class="cont_center contents_login">
+				<h2 class="title_main">Now, You are<br>THE ART Gallerist</h2>
 
-				<div class="btn_home">
+				<p class="descript_signup">디아트의 갤러리스트가 되신 것을 환영합니다.</p>
+
+				<p class="text_signup">
+					마음에 드는 멋진 작품을 골라서<br>
+					당신의 공간을 아름답게 변화시켜보세요.<br><br>
+					오직 디아트에서만 가능한<br>
+					<strong>무료 작품 전시 서비스</strong>를 이용하세요.
+				</p>
+
+				<div class="btn_home home_link_area">
 					<a href="#">디아트 홈</a>
+
+					<a href="#">My Gallery</a>
 				</div>
-			</div>			
+			</div>
 		</div>
 		<!-- //container -->
 
