--- a/00_COM-03_search.html
+++ b/00_COM-03_search.html
@@ -11,7 +11,7 @@
 <link href="contents/css/main.css" type="text/css" rel="stylesheet">
 <link href="contents/css/sub.css" type="text/css" rel="stylesheet">
 
-<script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
 <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
@@ -50,14 +50,22 @@
 						</ul>
 
 						<!-- 로그인 안했을 경우 -->
-						<div class="btn_login_area" style="display:none;">
+						<div class="btn_login_area">
 							<a href="#" class="btn_action">로그인</a>
+
+							<p class="log_inout_link">
+								처음이신가요? <a href="#">디아트 가입하기</a>
+							</p>
 						</div>
 						<!-- //로그인 안했을 경우 -->
 
 						<!-- 로그인 했을 경우 -->
-						<div class="btn_login_area">
+						<div class="btn_login_area" style="display:none;">
 							<a href="#" class="user_link">갤러리스트 <strong>이정훈</strong> 님</a>
+
+							<p class="log_inout_link">
+								<a href="#">로그아웃</a>
+							</p>
 						</div>
 						<!-- //로그인 했을 경우 -->
 					</div>
@@ -516,7 +524,9 @@
 			<p class="layer_bg"></p>
 
 			<div class="layer_layout">
-				<button class="close_layer">레이어팝업 닫기</button>
+				<div class="layer_top">
+					<button class="close_layer">레이어팝업 닫기</button>
+				</div>
 
 				<!-- 레이어팝업 컨텐츠 -->
 				<div class="layer_container">
