--- a/05_Account-06_ViewTerms.html
+++ b/05_Account-06_ViewTerms.html
@@ -11,7 +11,7 @@
 <link href="contents/css/main.css" type="text/css" rel="stylesheet">
 <link href="contents/css/sub.css" type="text/css" rel="stylesheet">
 
-<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
 <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
