js, css 추가사항 수정, 파일명 수정

--- a/02-02_Exhibition_detail.html
+++ b/02-02_Exhibition_detail.html
@@ -38,7 +38,7 @@
 
 					<div class="gnb_layout">
 						<ul class="join_link_list">
-							<li><a href="#">Exibition</a></li>
+							<li><a href="#">Exhibition</a></li>
 							<li><a href="#">Artist</a></li>
 						</ul>
 
@@ -98,13 +98,13 @@
 							<div class="swiper-wrapper">
 								<div class="swiper-slide feat_img_box">
 									<div class="feat_img">
-										<img src="contents/images/main/exibition_img1.jpg" alt="">
+										<img src="contents/images/main/exhibition_img1.jpg" alt="">
 									</div>
 								</div>
 
 								<div class="swiper-slide feat_img_box">
 									<div class="feat_img">
-										<img src="contents/images/main/exibition_img2.jpg" alt="">
+										<img src="contents/images/main/exhibition_img2.jpg" alt="">
 									</div>
 								</div>
 							</div>
@@ -526,7 +526,7 @@
 			<div class="review_layer_layout">
 				<div class="feat_img_box">
 					<div class="feat_img">
-						<img src="contents/images/main/exibition_img1.jpg" alt="">
+						<img src="contents/images/main/exhibition_img1.jpg" alt="">
 					</div>
 				</div>
 			</div>
