--- a/04-01_Order_form.html
+++ b/04-01_Order_form.html
@@ -202,7 +202,7 @@
 										<div class="address_search_input">
 											<input type="text" class="input_sub_form" placeholder="우편번호" title="우편번호 입력">
 
-											<a href="#" class="btn_form">주소검색</a>
+											<button type="button" class="btn_form">주소검색</button>
 										</div>
 
 										<div class="address_mt">
@@ -255,7 +255,7 @@
 										<div class="address_search_input">
 											<input type="text" class="input_sub_form" placeholder="우편번호" title="우편번호 입력">
 
-											<a href="#" class="btn_form">주소검색</a>
+											<button type="button" class="btn_form">주소검색</button>
 										</div>
 
 										<div class="address_mt">
@@ -377,7 +377,7 @@
 					</div>
 
 					<div class="btn_display_area">
-						<a href="#total_price" class="btn_active btn_free">무료로 이 작품 전시하기</a>
+						<button type="button" class="btn_active btn_free">무료로 이 작품 전시하기</button>
 					</div>	
 				</div>
 				<!-- //최종 결제금액 -->
@@ -434,8 +434,8 @@
 					</div>
 
 					<div class="btn_display_area">
-						<a href="#" class="btn_active btn_free_display">무료로 이 작품 전시하기</a>
-						<a href="#" class="btn_active btn_display_apply">전시신청</a>
+						<button type="button" class="btn_active btn_free_display">무료로 이 작품 전시하기</button>
+						<button type="button" class="btn_active btn_display_apply">전시신청</button>
 					</div>
 				</div>
 				<!-- //결제금액 확인 영역 -->
