--- a/05-02-01_FindAccount.html
+++ b/05-02-01_FindAccount.html
@@ -176,7 +176,7 @@
 								<input type="text" class="input_form" placeholder="메일 주소를 입력하세요." title="메일 주소 입력">
 
 								<div class="form_r_area">
-									<a href="#" class="btn_form inactive">인증메일 발송</a>
+									<button type="button" class="btn_form inactive">인증메일 발송</button>
 								</div>
 							</div>
 
@@ -187,7 +187,7 @@
 								<input type="text" class="input_form" placeholder="메일 주소를 입력하세요." title="메일 주소 입력" value="aaa@gmail.com">
 
 								<div class="form_r_area">
-									<a href="#" class="btn_form">인증메일 발송</a>
+									<button type="button" class="btn_form">인증메일 발송</button>
 								</div>
 							</div>
 						</li>
@@ -196,7 +196,7 @@
 								<input type="text" class="input_form" placeholder="메일 주소를 입력하세요." title="메일 주소 입력" value="aaa@gmail.com">
 
 								<div class="form_r_area">
-									<a href="#" class="btn_form black">재발송</a>
+									<button type="button" class="btn_form black">재발송</button>
 								</div>
 							</div>
 						</li>
@@ -216,7 +216,7 @@
 								<div class="form_r_area">
 									<span class="certify_time">05:00</span>
 
-									<a href="#" class="btn_form inactive">확인</a>
+									<button type="button" class="btn_form inactive">확인</button>
 								</div>
 							</div>
 
@@ -227,7 +227,7 @@
 								<input type="text" class="input_form" placeholder="발송받은 인증코드를 입력하세요." title="인증코드 입력" value="123456">
 
 								<div class="form_r_area">
-									<a href="#" class="btn_form black">확인</a>
+									<button type="button" class="btn_form black">확인</button>
 								</div>
 							</div>
 						</li>
